# wopper

./: .gitignore  LICENSE  README.md  auto_programmer-1.py  auto_programmer.py  changes.patch  concept_inferencer.py  dataset_loader-1.py  dataset_loader.py  inference.py  inference.py.orig  logger.py  matcher-difflib.py  pyproject.toml  rebuild_and_infer.sh  sample_training_data.jsonl  test_vocab.json  train_concept_model-1.py  train_concept_model.py  vocab.json  vocab_manager.py  wididatainterface.py
RFL/: .gitignore  README.md  forward.py  init_rfl_weights.py  make_training_texts.py  model.py  more_on_pretraining.md  prebias_with_knowledge.md  reflexive_fractal_logic.md  rfl_BERT.md  rfl_custom_loss.md  rfl_full_project.py  rfl_loss.py  rfl_main_with_training_and_save.py  rfl_main_with_training_data.py  rfl_model.py  rfl_model_display.md  rfl_neural_architectures.md  rfl_pretrain.md  rfl_test_echo_examples.py  rfl_test_with_pretrained.py  rfl_train_with_training_and_save.py  rfl_trained.pt  rfl_training_concepts.md  rfl_training_guide.md  seed_rfl_with_concepts.py  test_rfl_model.py  training_texts.py  usage_1_example.py  usage_example.py
doc/: query-1.md  query-2.md  query-3.md  query-4.md  query-5.md
drive_scorer/: .gitignore  drive_scorer_log.json  drive_seed_data.json  word-assoc-1.py  word-assoc.py
interface/: __init__.py  chatgpt_interface.py  wikidata_interface.py
prime/: README-info.md  build_prime_factors_csv.py  build_prime_factors_csv1.py  deep_binary_net.pth  prime_factors_output.csv  prime_nn.py  prime_nn1.py  prime_nn2.py  prime_nn3.py  prime_nn4.py  (+8 more)
(+11 files in other folders)
