[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wopper-interface"
version = "0.1.0"
description = "Thin wrappers for ChatGPT and Wikidata APIs"
authors = [{name = "wopper"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "openai",
    "SPARQLWrapper",
]

[project.urls]
Homepage = "https://example.com"
